# CommonEnergySystemModel

./: .devcontainer.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  antora-playbook.yml  antora-playmbook.yml  package-lock.json  package.json  pyproject.toml  transformer-developer-guide.md
.github/workflows/: ci.yml  docs.yml
.spinetoolbox/: project.json
artifacts/documentation/: antora.yml
data/samples/: cesm-sample.yaml  cesm-sample_old_with_heat.yaml  flextool_examples.sqlite  ines-sample.yaml  rts_psy5_additional.yaml
docs/: 404.html  index.html  ines-core.yaml  search-index.js  sitemap.xml  transformer-developer-guide.md
documentation/: Balance.md  Commodity.md  Database.md  DirectionalValue.md  EfficiencyValue.md  Entity.md  Flow.md  HasFlow.md  HasInvestments.md  HasPenalty.md  HasProfiles.md  Link.md  Link_efficiency.md  Node.md  NodeToUnit.md  SolvePattern.md  Storage.md  System.md  Unit.md  UnitToNode.md  antora.yml  capacity.md  conversion_method_enum.md  currency_year.md  database__balances.md  database__commodity.md  database__link.md  database__node__to_unit.md  database__solve_pattern.md  database__storages.md  database__system.md  database__unit.md  database__unit__to_node.md  description.md  efficiency.md  entity.md  flow_scaling_method_enum.md  forward.md  hasFlow__flow_annual.md  hasFlow__flow_profile.md  (+41 more)
model/: cesm.yaml  cesm_v0.1.0.yaml  ines-core.yaml
scripts/: cesm-pydantic.py
scripts/processing/: test.py  (+16 more)
tests/: conftest.py  test_readers.py  test_schema.py  test_transform_parameters.py  test_writers.py
(+197 files in other folders)
