[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cesm"
version = "0.1.0"
dependencies = [
    "linkml-runtime",
    "pyyaml",
    "xarray",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["core*", "readers*", "transformers*", "writers*"]
