[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cesm"
version = "0.1.0"
dependencies = [
    "linkml-runtime>=1.6",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "duckdb>=0.9",
]

[project.optional-dependencies]
spine = ["spinedb_api"]
dev = ["pytest", "ruff"]
docs = ["linkml"]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["src/generated/*", "scripts/cesm-pydantic.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["core*", "generated*", "readers*", "transformers*", "writers*"]
